--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with JohnDoe landing page.">
+    <meta name="description" content="Abijith webpage">
     <meta name="author" content="Devcrud">
     <title>Abijith</title>
     <!-- font icons -->
@@ -558,29 +558,29 @@
                     </div> 
                     <div class="col-md-6 col-lg-4 advertising new"> 
                         <div class="portfolio-item">
-                            <img src="assets/imgs/advertising-4.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">            
+                            <img src="assets/imgs/Screenshot (96).png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">            
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/advertising-4.jpg"></a>
                                 <div class="text-holder">
-                                    <!-- <h6 class="title">ADVERTISING</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p> -->
+                                    <h6 class="title">Weather</h6>
+                                    <p class="subtitle">Weather Forecast UI</p>
                                 </div>
                             </div>
                         </div>
                                 
                     </div> 
-                    <div class="col-md-6 col-lg-4 branding new">
+                    <!-- <div class="col-md-6 col-lg-4 branding new">
                         <div class="portfolio-item">
                             <img src="assets/imgs/Screenshot (96).png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                        
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/branding-1.jpg"></a>
                                 <div class="text-holder">
                                     <h6 class="title">Weather</h6>
-                                    <p class="subtitle">Weather Forecast UI/p>
+                                    <p class="subtitle">Weather Forecast U</p>
                                 </div>
                             </div> 
                         </div>
-                    </div> 
+                    </div>  -->
                     <div class="col-md-6 col-lg-4 branding">
                         <div class="portfolio-item">
                             <img src="assets/imgs/Screenshot (85).png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">  
